--- a/config/config.sample.json
+++ b/config/config.sample.json
@@ -1,11 +1,21 @@
 {
+  "hubs": [
+    {
+      "ip": "192.168.0.1",
+      "name": "myhub"
+    },
+    {
+      "ip": "192.168.0.2",
+      "name": "my-other-hub"
+    }
+  ],
   "enableHTTPserver": true,
   "mqtt_host": "mqtt://127.0.0.1",
   "topic_namespace": "harmony-api",
   "mqtt_options": {
-      "port": 1883,
-      "username": "someuser",
-      "password": "somepassword",
-      "rejectUnauthorized": false
+    "port": 1883,
+    "username": "someuser",
+    "password": "somepassword",
+    "rejectUnauthorized": false
   }
 }
