add the ability to optionally send retain in mqtt payload

--- a/config/config.sample.json
+++ b/config/config.sample.json
@@ -16,6 +16,7 @@
     "port": 1883,
     "username": "someuser",
     "password": "somepassword",
-    "rejectUnauthorized": false
+    "rejectUnauthorized": false,
+    "retain": true
   }
 }
