--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -6,27 +6,37 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
-        with:
-          submodules: true
+      - uses: actions/checkout@v2.3.4
+      - uses: docker/setup-buildx-action@v1
+      - uses: docker/setup-qemu-action@v1
 
-      - uses: crazy-max/ghaction-docker-buildx@v1
-
-      - name: Docker login
-        env:
-          docker_username: ${{ secrets.docker_username }}
-          docker_password: ${{ secrets.docker_password }}
-        run: docker login  -u $docker_username -p ${docker_password}
-
-      - name: Run Buildx
-        run: |
-          docker buildx build \
-          --platform linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x \
-          -t ${GITHUB_REPOSITORY}:sha-${GITHUB_SHA} --push .
-
-      - name: Push latest
+      - name: Login to dockerhub
         if: github.ref == 'refs/heads/master'
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Login to GitHub
+        if: github.ref == 'refs/heads/master'
+        uses: docker/login-action@v1
+        with:
+          registry: docker.pkg.github.com
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Prepare
+        id: prepare
         run: |
-          docker buildx build \
-          --platform linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x \
-          -t ${GITHUB_REPOSITORY}:latest --push .
+          TAGS=${GITHUB_REPOSITORY}:sha-${GITHUB_SHA},docker.pkg.github.com/${GITHUB_REPOSITORY}:sha-${GITHUB_SHA}
+          if [ "$GITHUB_REF" == "refs/heads/master" ]; then
+            TAGS=$TAGS,${GITHUB_REPOSITORY}:latest,docker.pkg.github.com/${GITHUB_REPOSITORY}:latest
+          fi
+          echo ::set-output name=TAGS::${TAGS}
+
+      - name: build+push
+        uses: docker/build-push-action@v2
+        with:
+          platforms: linux/arm64,linux/amd64,linux/arm/v6,linux/arm/v7
+          push: ${{ github.ref == 'refs/heads/master' }}
+          tags: ${{ steps.prepare.outputs.TAGS }}
