--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -6,4 +6,5 @@ jobs:
     uses: chrisns/repo-config/.github/workflows/dockerbuild.yml@main
     with:
       platforms: linux/arm64,linux/amd64,linux/arm/v6,linux/arm/v7
+    secrets:
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
