--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -3,7 +3,7 @@ on: [push]
 
 jobs:
   build:
-    uses: chrisns/repo-config/.github/workflows/dockerbuild.yml@main
+    uses: chrisns/.github/.github/workflows/dockerbuild.yml@main
     with:
       platforms: linux/arm64,linux/amd64,linux/arm/v6,linux/arm/v7
     secrets:
